src/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  display: grid;
  grid-template-rows: 80px 1fr min-content;
  grid-template-columns: min-content;
}

header {
  background-color: black;
  color: white;
  font: bold 3rem Arial;
  padding: 10px;
  text-align: center;
  grid-area: 1 / 1 / 2 / 3;
  border-bottom: 2px solid rgb(0 0 0);
}

#sidebar {
  grid-area: 2 / 1 / 3 / 2;
  border-right: 2px solid rgb(0 0 0);
  padding: 10px;
  gap: 25px;
  display: flex;
  flex-direction: column;
}

#sidebar-filter-container,
#sidebar-project-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#sidebar-filter-header,
#sidebar-filter-tabs *,
#sidebar-project-header,
#sidebar-project-new-button,
#sidebar-project-tabs * {
  background-color: rgb(255 255 255);
  border: 5px solid white;
  width: 200px;
  font: bold 2rem Arial;
  user-select: none;
  text-align: center;
}

#sidebar-filter-tabs *:hover,
#sidebar-filter-tabs *.active,
#sidebar-project-tabs *:hover,
#sidebar-project-tabs *.active {
  background-color: black;
  color: white;
  border: 5px solid red;
}

#main {
  grid-area: 2 / 2 / 3 / 3;
}

#new-project-dialog {
  margin: auto;
}

#new-project-dialog[open] {
  height: 400px;
  width: 400px;
}

footer {
  background-color: black;
  color: white;
  grid-area: 3 / 1 / 4 / 3;
  border-top: 2px solid;
  text-align: center;
}

